msa/vivaldi/fe-web/510-vivaldi-fe-web-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: fe-web
  labels:
    app: fe-web
    version: 1.0.0
    release: vivaldi
spec:
  host: fe-web
  subsets:
  - name: v1
    labels:
      version: 1.0.0
  - name: v2
    labels:
      version: 1.1.0
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 50
        connectTimeout: 5s
      http:
        #http1MaxPendingRequests: 1 # default 1024
        #http2MaxRequests: 1 # default 1024
        #maxRequestsPerConnection: 1
        #maxRetries: 3  # default 3
    outlierDetection:
      consecutiveErrors: 20
      interval: 10s
      baseEjectionTime: 15s
      maxEjectionPercent: 100
    tls:
      mode: ISTIO_MUTUAL
